objects/SGR_Opportunity_Group_Section__c.object
<CustomObject>
    <fields>
        <fullName>BEN_AGMT_effective_date__c</fullName>
        <label>BEN_AGMT effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BEN_AGMT_renewal_date__c</fullName>
        <label>BEN_AGMT renewal date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Cancel_Date__c</fullName>
        <label>Benefit Agreement Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Agreement</label>
        <referenceTo>SGR_Opportunity_Benefit_Agreement__c</referenceTo>
        <relationshipLabel>Opportunity Group Section</relationshipLabel>
        <relationshipName>Opportunity_Group_Section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Product_Name__c</fullName>
        <label>Corporate Product Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Product_Number__c</fullName>
        <label>Corporate Product Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PREM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_External_Id__c</fullName>
        <label>GS External Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Section_Cancel_Code__c</fullName>
        <label>Group Section Cancel Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Section_Cancel_Date__c</fullName>
        <label>Group Section Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Section_Original_Effective_Date__c</fullName>
        <label>Group Section Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invitro__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>TX Only</inlineHelpText>
        <label>Invitro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maternity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maternity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Group_Number__c</fullName>
        <label>Opportunity Group Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Group_Section_Number__c</fullName>
        <displayFormat>OGS-{0000}</displayFormat>
        <label>Opportunity Group Section Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Group Section</relationshipLabel>
        <relationshipName>Opportunity_Group_Section</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Opportunity Group Section</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Healthcare_Active_Members__c</fullName>
        <label>Total Healthcare Active Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Group Section</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Group Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Group Section</pluralLabel>
    <recordTypes>
        <fullName>SGR_Opportunity_Group_Section</fullName>
        <active>true</active>
        <description>SGR Opportunity Group Section RecordType</description>
        <label>SGR Opportunity Group Section</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>